styles(Header.jsx): spacing and input fixes

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -7,11 +7,11 @@ a:link {
 
 ul{
     margin-bottom: 0;
-    padding: 10px 10px;
+    padding: 0;
 }
 
 button{
-    padding: 4px 0px 4px 14px;
+    padding: 4px 0px;
     margin:0px;
 }
 
